...
        Group {
            if (!favoriteLocations.contains(weather.data.name)) {
                Button(action: {
                    favoriteLocations.append(weather.data.name)
                    UserDefaults.standard.set(favoriteLocations, forKey: "Favorites")
                }, label: {
                        Label("Add Favorite", systemImage: "star")
                    })
            }
            else {
                Button(action: {
                    favoriteLocations = favoriteLocations.filter { $0 != weather.data.name }
                    UserDefaults.standard.set(favoriteLocations, forKey: "Favorites")
...
